fixing alignment of demo column width dropdown

--- a/src/Components/Demo/ComponentDemo.less
+++ b/src/Components/Demo/ComponentDemo.less
@@ -23,5 +23,6 @@
 
   .ComponentDemo-footer {
     margin-top: 15px;
+    text-align: right;
   }
 }
